# lock-ft-mint-ft

./: Cargo.toml  README.md
res/: release.wasm
src/: ft_token_receiver.rs  lib.rs
