[package]
name = "contract"
version = "0.1.0"
authors = ["Vadim Ilin <vadim@near.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.6.0"
near-contract-standards = "5.6.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
uint = { version = "=0.9.0", default-features = false }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true